Added Time you are sleeping label to time dropdown menu.

--- a/plan_sleep.html
+++ b/plan_sleep.html
@@ -28,7 +28,7 @@
         <option value="18+">18+</option>
         </select>
         <select id="TimeSlept">
-        <option value = "12:00PM">12:00PM</option>
+        <option value = "12:00PM">Time you are sleeping: 12:00PM</option>
         <option value = "12:30PM">12:30PM</option>
         <option value = "1:00PM">1:00PM</option>
         <option value = "1:30PM">1:30PM</option>
